# ai-chat

./: .gitignore  Dockerfile  MIGRATIONS.md  README.md  alembic.ini  pyproject.toml
.github/workflows/: github-ci.yml
chat_api/: app.py  auth_utils.py  config.py  db.py  error_constants.py  error_contant.py  models.py  response_message.py
chat_api/applications/: application_views.py  applications_repository.py  applications_response_models.py  applications_services.py  models.py
chat_api/chats/: chats_reponse_model.py  chats_repository.py  chats_response_models.py  chats_services.py  chats_views.py  models.py
chat_api/db/: __init__.py  db.py  models.py
chat_api/tests/threads/: test_thread_service.py  test_thread_views.py
chat_api/threads/: models.py  thread_repository.py  thread_response_model.py  thread_service.py  thread_views.py  threads_repository.py  threads_request_model.py  threads_services.py
chat_api/views/: __init__.py  hello.py
local_setup/: docker-compose.yml
migrations/: env.py
migrations/versions/: 001_create_threads_table.py  812db957037d_add_application_table_and_update_thread.py  92ae4c8d0e00_create_threads_and_chats_tables.py  cc98c477b5eb_create_applications_table.py  e66ada07112d_create_threads_table.py  f77ea0f8d113_create_chats_table.py
tests/applications/: test_applications_services.py  test_applications_views.py
tests/chats/: test_chats_services.py  test_chats_views.py
tests/threads/: test_threads_services.py
